--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,104 @@
 <div class="container mt-1 mb-2">
-
-
-	<div class="card border-primary text-primary mb-3">
-		<div class="card-header h3"><i class="far fa-user"></i> Actualización de usuarios</div>
-		<div class="card-body text-primary">
-			<h5 class="card-title">Editando</h5>
-
-			<form>
-				<div class="form-row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Email</label>
-						<input type="email" class="form-control form-control-sm" id="inputEmail4">
+  <div class="card border-primary text-primary mb-3">
+    <div class="card-header h3">
+      <i class="far fa-user"></i> Actualización de usuarios
     </div>
-						<div class="form-group col-md-6">
-							<label for="inputPassword4">Password</label>
-							<input type="password" class="form-control form-control-sm" id="inputPassword4">
+    <div class="card-body text-primary">
+      <h5 class="card-title">Editando</h5>
+
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input
+              type="email"
+              class="form-control form-control-sm"
+              id="inputEmail4"
+              placeholder="ejemplo@correo.com"
+              ngModel
+              required
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputPassword4">Password</label>
+            <input
+              type="password"
+              class="form-control form-control-sm"
+              id="inputPassword4"
+            />
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress">Nombre completo</label>
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            id="inputAddress"
+            placeholder="1234 Main St"
+          />
+        </div>
+        <div class="form-group">
+          <label for="inputAddress2">Dirección</label>
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            id="inputAddress2"
+            placeholder="Apartment, studio, or floor"
+          />
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-2">
+            <label for="inputCity">Teléfono</label>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              id="inputCity"
+            />
+          </div>
+          <div class="form-group col-md-5">
+            <label for="inputState">Rol</label>
+            <select id="inputState" class="form-control form-control-sm">
+              <option selected>Vendedor</option>
+              <option>Almacén</option>
+              <option>Compras</option>
+              <option>Administrador</option>
+            </select>
+          </div>
+          <div class="form-group col-md-5">
+            <label for="inputState">Sucursal</label>
+            <select id="inputState" class="form-control form-control-sm">
+              <option selected>Tienda 1</option>
+              <option>Tienda 2</option>
+              <option>Tienda 3</option>
+              <option>Matriz</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <!-- Default checked -->
+            <div class="custom-control custom-switch">
+              <input
+                type="checkbox"
+                class="custom-control-input"
+                id="customSwitch1"
+                checked
+              />
+              <label class="custom-control-label" for="customSwitch1"
+                >Iniciar activo</label
+              >
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center bd-highlight mb-3">
+          <button type="button" class="btn-sm btn btn-outline-success mr-5">
+            <i class="fas fa-database"></i> Actualizar
+          </button>
+          <button type="button" class="btn-sm btn btn-outline-warning">
+            <i class="fas fa-times"></i> Cancelar
+          </button>
+        </div>
+      </form>
     </div>
-						</div>
-						<div class="form-group">
-							<label for="inputAddress">Nombre completo</label>
-							<input type="text" class="form-control form-control-sm" id="inputAddress" placeholder="1234 Main St">
   </div>
-							<div class="form-group">
-								<label for="inputAddress2">Dirección</label>
-								<input type="text" class="form-control form-control-sm" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-								<div class="form-row">
-									<div class="form-group col-md-6">
-										<label for="inputCity">Teléfono</label>
-										<input type="text" class="form-control form-control-sm" id="inputCity">
-    </div>
-										<div class="form-group col-md-4">
-											<label for="inputState">Rol</label>
-											<select id="inputState" class="form-control form-control-sm">
-        <option selected>Vendedor</option>
-        <option>Almacén</option>
-        <option>Compras</option>        
-        <option>Administrador</option>
-      </select>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="form-check">
-											<input class="form-check-input" type="checkbox" id="gridCheck">
-											<label class="form-check-label" for="gridCheck">
-        Iniciar activo
-      </label>
-										</div>
-									</div>
-									<div class="d-flex justify-content-center bd-highlight mb-3">
-										<button type="button" class="btn-sm btn btn-outline-success mr-5"><i class="fas fa-database"></i> Actualizar</button>
-										<button type="button" class="btn-sm btn btn-outline-warning"><i class="fas fa-times"></i> Cancelar</button>
-									</div>
-			</form>
-
-		</div>
-	</div>
 </div>
