--- a/src/app/component/usuarios/usuariosdetalle.component.html
+++ b/src/app/component/usuarios/usuariosdetalle.component.html
@@ -4,7 +4,8 @@
       <i class="far fa-user"></i> Actualización de usuarios
     </div>
     <div class="card-body text-primary">
-      <h5 class="card-title">Editando</h5>
+      <h4 class="card-title text-center">Actualizando</h4>
+      <hr />
 
       <form>
         <div class="form-row">
@@ -76,7 +77,6 @@
         </div>
         <div class="form-group">
           <div class="form-check">
-            <!-- Default checked -->
             <div class="custom-control custom-switch">
               <input
                 type="checkbox"
@@ -90,7 +90,13 @@
             </div>
           </div>
         </div>
-        <div class="d-flex justify-content-center bd-highlight mb-3">
+        <div class="form-row">
+          <div class="form-group col-md-10"><hr /></div>
+          <div class="form-group col-md-2 d-flex justify-content-end">
+            algodon
+          </div>
+        </div>
+        <div class="d-flex justify-content-end bd-highlight">
           <button type="button" class="btn-sm btn btn-outline-success mr-5">
             <i class="fas fa-database"></i> Actualizar
           </button>
