--- a/src/app/component/usuarios/usuariosdetalle.component.html
+++ b/src/app/component/usuarios/usuariosdetalle.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-1 mb-2">
-  <div class="card border-primary text-primary mb-3">
+  <div class="card border-primary text-primary">
     <div class="card-header h3">
       <i class="far fa-user"></i> Actualización de usuarios
     </div>
@@ -91,10 +91,10 @@
           </div>
         </div>
         <div class="form-row">
-          <div class="form-group col-md-10"><hr /></div>
-          <div class="form-group col-md-2 d-flex justify-content-end">
+          <div class="form-group col-md-12"><hr /></div>
+          <!-- <div class="form-group col-md-2 d-flex justify-content-end">
             algodon
-          </div>
+          </div> -->
         </div>
         <div class="d-flex justify-content-end bd-highlight">
           <button type="button" class="btn-sm btn btn-outline-success mr-5">
