--- a/src/app/component/tiendas/tiendasdetalle.component.html
+++ b/src/app/component/tiendas/tiendasdetalle.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-1 mb-2">
   <div class="card border-primary text-primary">
     <div class="card-header h3">
-      <i class="far fa-user"></i> Actualización de usuarios
+      <i class="far fa-home-user"></i> Actualización de sucursales
     </div>
     <div class="card-body text-primary">
       <h4 class="card-title text-center">Actualizando</h4>
@@ -26,8 +26,6 @@
               type="password"
               class="form-control form-control-sm"
               id="inputPassword4"
-              ngModel
-              required
             />
           </div>
         </div>
@@ -49,7 +47,6 @@
             placeholder="Apartment, studio, or floor"
           />
         </div>
-
         <div class="form-row">
           <div class="form-group col-md-2">
             <label for="inputCity">Teléfono</label>
